<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/export_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Export CSV"
            android:textColor="@color/black"
            android:backgroundTint="@android:color/transparent"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/userFinalList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

</LinearLayout>